# snippets-cpp

./: README.md  make-snippet.sh
template/: CMakeLists.txt
template/scripts/: build-and-run.sh  prepare-build.sh
